--- a/SIR_model.ipynb
+++ b/SIR_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +30,13 @@
     "    dSdt = -beta * S * I / N\n",
     "    dEdt = beta * S * I / N - gamma * E\n",
     "    dIdt = delta * E - gamma * I\n",
-    "    dRdt = k * I\n",
+    "    dRdt = gamma * I\n",
     "    return dSdt, dEdt, dIdt, dRdt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
